# prompting-cookbook

./: CHOOSE-YOUR-TASK.md  COMMON-MISTAKES-AND-WARNINGS.md  FACULTY-WORKFLOW-EXAMPLE.md  README.md  START-HERE.md  mkdocs.yml  pyproject.toml
00-overview/: anatomy-of-a-prompt.md  context-engineering.md  model-capabilities-overview.md  workshop-goal.md
10-use-cases/: accessibility.md  assignments.md  interactive-module-elements.md  rubrics-and-feedback.md  syllabus-as-context-engine.md
20-constraints/: best-practices-udl.md  course-values-review.md  institutional-requirements.md  policy-aware-prompting.md  zero-shot-vs-grounded.md
30-environment/: infrastructure-reality.md  local-ai-option.md  rutgers-tooling.md
40-workshop/: hands-on-activities.md  qa-and-open-exploration.md  reflection-and-readout.md
50-prompt-recipes/: alt-text-generation.md  grounded-grading-feedback.md  hosted-activity-generation.md  policy-aware-syllabus-revision.md  policy-safe-generation.md  rubric-generation.md  static-to-interactive-assignment.md  syllabus-to-module-objectives.md  udl-aware-activity-design.md
60-examples/: alt-text-generation-example.md  bare-vs-context-rich-prompt.md  canvas-translation-example.md  hosted-activity-generation-example.md  interactive-vocabulary-practice.md  policy-aware-syllabus-revision-example.md  policy-safe-generation-example.md  prompt-vs-context-engineering.md  rubric-generation-example.md  static-to-interactive-assignment-example.md  syllabus-to-module-objectives-example.md  udl-aware-activity-design-example.md  xr-social-engagement-week1.md  (+2 more)
(+25 files in other folders)
